# LEGEND

./: CMakeLists.txt  G4_setup&command.sh  Intensity.mac  Project.cc  README.md  general_particle_source.mac  run.mac
include/: CMakeCache.txt  NovaDetectorConstruction.hh  NovaPrimaryGeneratorAction.hh  Project1DetectorConstruction.hh  Project1DetectorMessenger.hh  Project1Material1Hit.hh  Project1Material1Sd.hh  Project1PmtHit.hh  Project1PmtSd.hh  Project2EventAction.hh  Project2PrimaryGeneratorAction.hh  Project2PrimaryGeneratorMessenger.hh  Project2RecorderBase.hh  Project2RunAction.hh  Project2StackingAction.hh  Project2SteppingAction.hh  Project2TrackingAction.hh  Project2Trajectory.hh  Project2TrajectoryPoint.hh  Project2UserEventInformation.hh  Project2UserTrackInformation.hh  Project3EmPhysics.hh  Project3GeneralPhysics.hh  Project3MuonPhysics.hh  Project3PhysicsList.hh
input/: 10_Acrylic_MIT_absorptionLength.txt  10_Acrylic_Tecacry1_absorptionLength.txt  10_Acrylic_Tecacry3_absorptionLength.txt  10_Acrylic_Tecacry4_absorptionLength.txt  1_LAr_refraction_index_110-500nm.txt  1_LAr_refraction_index_110-700nm.ods  1_LAr_refraction_index_110-700nm.txt  2. TPB Rindex(notTPB)  2_TPB_refraction_index_200-700nm_wrong.txt  2_TPB_refraction_index_200_700nm_dense_wrong.txt  2_TPB_refraction_index_constant.txt  3_TPB_WLSabsorptionLegnth_GERDA_50-250&275-415nm.txt  3_TPB_WLSabsorptionLegnth_GERDA_50-250.ods  3_TPB_WLSabsorptionLegnth_GERDA_50-250.txt  3_TPB_WLSabsorptionLegnth_GERDA_50-415nm.ods  3_TPB_WLSabsorptionLegnth_GERDA_50-415nm.txt  3_TPB_WLSabsorptionLength_Springer_275-415nm.txt  (+19 more)
(+42 files in other folders)
